--- a/Javascript/Arrow_functions.html
+++ b/Javascript/Arrow_functions.html
@@ -25,8 +25,8 @@
             name: ["Raghuveer","rahil"],
             age: "19",
             tell(){
-                this.name.forEach((cr) => {
-                    console.log("hahah "+ cr);
+                this.name.forEach((cr) => { // Here i used a Arrow FUnction then this is possible, if normal funtion is there it wont access name.
+                    console.log("Hello "+ cr);
                 });
             }
         }
