--- a/Javascript/date.html
+++ b/Javascript/date.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Date XP</title>
 </head>
+<style>
+    #date{
+        color: blue;
+    }
+</style>
 <body>
     <div class="container">
         <p>
