--- a/HTML/form.html
+++ b/HTML/form.html
@@ -7,7 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Forms</title>
 </head>
-
+<style>
+    form{
+        border: 2px solid black;
+        height: 800px;
+        margin: 20px auto;
+        padding-left: 500px;
+        padding-right: 50%;
+    }
+</style>
 <body>
     <h2>This is HTML forms tutorial</h2>
     <form action="backend.php">
