--- a/HTML/sir.html
+++ b/HTML/sir.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Table</title>
 </head>
+<style src="sir.css">
+
+</style>
 
 <body>
     <table border="1" width="100px" height="100px">
