--- a/HTML/first_program.html
+++ b/HTML/first_program.html
@@ -9,6 +9,23 @@
 <body>
     <h1>This is my first program using Javascript</h1>
 </body>
+<table>
+    <tr>
+        <td> Table </td>
+        <td> Table </td>
+        <td> Table </td>
+    </tr>
+    <tr>
+        <td> Table </td>
+        <td> Table </td>
+        <td> Table </td>
+    </tr>
+    <tr>
+        <td> Table </td>
+        <td> Table </td>
+        <td> Table </td>
+    </tr>
+</table>
 <div id="but">
     <button class="1stbutton">Click me!</button>
 </div>
