--- a/CSS/1stCSS.html
+++ b/CSS/1stCSS.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <style>
-        
+        .container{
+            color: azure;
+            font-style: italic;
+            
+        }
     </style>
     <div class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perferendis qui illum optio non. Modi ratione expedita illo, quam facere quos incidunt assumenda blanditiis consequatur cum adipisci quibusdam perspiciatis eius aliquam consequuntur?</div>
 </body>
