--- a/HTML/container.html
+++ b/HTML/container.html
@@ -8,7 +8,15 @@
 </head>
 <style>
     .container{
+       
         text-align: center;
+        padding-left: auto;
+        padding-right: auto;
+        position: absolute;
+        margin-left: 50%;
+        margin-right: 50%;
+        vertical-align: middle;
+
     }
 </style>
 <body>
