--- a/HTML/anchor.html
+++ b/HTML/anchor.html
@@ -16,6 +16,7 @@
     <script>
         function clicked(){
             console.log("Button clicked!")
+            document.getElementsByClassName('container').innerHTML="GGEZ";
         }
     </script> 
     </Body>  
