--- a/Backend_Node_js/Events.html
+++ b/Backend_Node_js/Events.html
@@ -19,6 +19,12 @@
     #para{
         color:lightgreen;
     }
+    p{
+        color:black;
+    }
+    button{
+        background-color:black;
+    }
 </style>
 <body>
     <div class="container">
