--- a/HTML/anchor.html
+++ b/HTML/anchor.html
@@ -11,7 +11,7 @@
     <!-- In this example we use the anchor tag for linking one page to another by using the href attribute   
     which specify the url of the second page which you want to link.-->  
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, laudantium cum voluptas facere ratione provident, quas consequuntur blanditiis accusamus mollitia vitae quae id.</p>  
-    <center> Click on <a href="https://www.javatpoint.com/html-favicon"> this link </a> for reading about HTML favicon in JavaTpoint.   
+    <center> Click on <a href="https://www.animepahe.com"> this link </a> for reading about HTML favicon in JavaTpoint.   
     </center> 
     <script>
         function clicked(){
