--- a/HTML/container.html
+++ b/HTML/container.html
@@ -13,9 +13,14 @@
         position: absolute;
         margin-left: 30%;
         margin-right: 30%;
-
-        
-
+    }
+    h1{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    p{
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 </style>
 <body>
