--- a/Javascript/interaction.html
+++ b/Javascript/interaction.html
@@ -20,10 +20,10 @@
         //confirm
         let ok=confirm("Are you sure ?");
         if(ok){
-            console.log("Sure")
+            console.log("Sure!")
         }
         else{
-            console.log("Not sure");
+            console.log("Not sure!");
         }
     </script>
 </body>
