--- a/Javascript/Events.html
+++ b/Javascript/Events.html
@@ -50,7 +50,7 @@
                 obj2.style.backgroundColor='pink';
             }
             else{
-                obj2.style.color="white";
+                obj2.style.backgroundColor="white";
             }
         }
         let obj1=document.getElementById("para");
