--- a/HTML/navigation.html
+++ b/HTML/navigation.html
@@ -7,14 +7,16 @@
     <title>Navigation</title>
 </head>
 <style>
-    
+    .imgage_spacing{
+        padding-right: 150px;
+    }
     img.sticky{
         float: right;
         display: inline;
         position: -webkit-sticky;
         position: sticky;
         margin: 20px 20px auto auto;
-        border: 2px solid black;
+        border: 5px solid black;
         
     }
     .nav{
@@ -54,7 +56,9 @@
             <li ><a href=" ">News</a></li>
         </ul>
     </div>
-    <img src="float.png" alt="Hello?" class="sticky" width="180" height="180">
+    <div class="imgage_spacing">
+        <img src="float.png" alt="Hello?" class="sticky" width="181" height="182">
+    </div>
     <div >
         <h1>Hello XP!</h1>
         <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos delectus aliquid similique. Eveniet, non explicabo? Tempore, ullam. Commodi odio aperiam doloremque impedit illo quidem enim error nisi tenetur magnam itaque aspernatur, eaque debitis. Fugiat minima provident ea amet ex vel, sit a possimus rerum minus soluta consequuntur nesciunt nulla ratione quaerat facere velit aliquam corporis cumque vero. Facilis voluptate ipsum animi, aut, harum similique fuga nisi totam cum voluptatibus eius officia, fugiat aliquam laborum mollitia quas deleniti minima. Accusamus, natus. Iusto, reiciendis vero ratione, sunt magnam tempore repellendus minus officiis consectetur autem earum quisquam velit non neque. Nihil fugit quaerat voluptatum quidem esse voluptatibus amet voluptates! Porro, odit minus aliquam laborum sint ab consectetur assumenda eum dolore consequuntur nulla sapiente sequi tenetur, distinctio est tempora. Culpa minima aliquid doloremque alias ratione! Dicta, veniam, ipsam modi cum quisquam quae nesciunt soluta aliquam porro iusto odio cupiditate veritatis impedit dolore corrupti. Reprehenderit harum sed unde rem repellat. Quidem voluptas voluptatum reprehenderit tempore soluta aperiam odio, laudantium totam corporis animi. Eos vero reiciendis voluptatibus dolorum autem nulla adipisci itaque repudiandae aspernatur, quia accusamus fugit voluptas aliquid optio cupiditate dolor quo, minima voluptates ea aut ducimus dolorem officia deserunt. Amet voluptates adipisci iusto itaque corrupti officiis voluptatibus cupiditate saepe, esse corporis, voluptatem quis! Nesciunt et dolorum fugiat porro maiores, iusto omnis quas autem itaque fugit consectetur dicta, sint perspiciatis temporibus accusantium tempore reiciendis ex aliquam, non aut blanditiis? A debitis vero cum ratione excepturi quae iusto molestiae, pariatur molestias deleniti eveniet esse, totam nisi dignissimos! Placeat optio quasi rem officia laboriosam molestiae numquam facilis sunt reprehenderit culpa sapiente voluptatem qui autem, error sit facere odio perferendis quia in. Maiores nemo velit eius voluptate. Suscipit dolor magnam facere numquam, recusandae, perspiciatis exercitationem minus nihil accusamus, impedit distinctio aliquid quam quaerat tenetur voluptatibus aliquam ut veniam! Aliquam nesciunt architecto nobis facilis alias enim modi inventore facere. Ad saepe architecto blanditiis eveniet fugit tempore, id quaerat deserunt minus amet! Iste, minus aut. Doloremque porro asperiores esse rem hic. Qui voluptatibus vitae minima, voluptas exercitationem earum consequatur, culpa accusantium hic ipsum, vel laboriosam repellat animi unde error aliquam magnam est iste atque quaerat nostrum iusto? Ut dignissimos possimus ab inventore distinctio porro delectus beatae maxime neque, dolores deserunt provident quam praesentium similique. Possimus, magni mollitia molestias aliquid asperiores quas rem iste sint optio. Illo officiis fugit repudiandae nesciunt! Quia provident asperiores odit. Iusto animi qui repudiandae, quo magnam veritatis error eos doloribus esse voluptates vitae! Reiciendis repellat quibusdam, sint harum maxime, voluptatibus fugit, ipsam iure expedita soluta quia. Dolorum itaque expedita dolorem consequatur autem impedit reprehenderit? Ullam et, harum similique laudantium rerum mollitia quasi enim fuga quidem dolores odit voluptas ut ipsa fugiat debitis quia expedita quis maiores iusto, nobis voluptatum delectus nihil? Quisquam magni, repellendus quidem assumenda at veritatis voluptas maxime enim? Illo cumque assumenda obcaecati asperiores odio accusantium ut exercitationem ex. Eum eaque debitis provident ipsam aperiam in, saepe, sint repellat nisi ipsa voluptatum. Labore deleniti illum eligendi quia similique pariatur sunt, veniam magnam sit blanditiis nobis minus culpa, consectetur commodi aperiam quisquam dolorem dolore at dolor nemo atque ad necessitatibus modi molestiae. Accusamus est praesentium quae quas tenetur nostrum numquam cumque, doloremque beatae culpa! Minus ducimus dolore quidem officiis quaerat labore aliquid adipisci necessitatibus ut molestiae, maxime, laboriosam fuga quas </p>
