--- a/HTML/navigation.html
+++ b/HTML/navigation.html
@@ -25,6 +25,7 @@
         padding-bottom: 3px;
     }
     p.para{
+        color: white;
         padding-right: 250px;
         font-size: 15px;
     }
@@ -47,7 +48,7 @@
         border: 2px solid black;
     }
 </style>
-<body>
+<body style="background-color: rgb(83, 83, 83);">
     <div class="nav">
         <ul>
             <li ><a href=" ">Home</a></li>
