--- a/HTML/navigation.html
+++ b/HTML/navigation.html
@@ -24,6 +24,9 @@
         padding-top: 3px;
         padding-bottom: 3px;
     }
+    h1{
+        color: white;
+    }
     p.para{
         color: white;
         padding-right: 250px;
