--- a/HTML/navigation.html
+++ b/HTML/navigation.html
@@ -7,9 +7,12 @@
     <title>Navigation</title>
 </head>
 <style>
-    .imgage_spacing{
+    /* .imgage_spacing{
+        float: right;
         padding-right: 150px;
-    }
+        position: -webkit-sticky;
+        position: sticky;
+    } */
     img.sticky{
         float: right;
         display: inline;
@@ -26,6 +29,9 @@
     }
     h1{
         color: white;
+        padding: 20px;
+
+        background-color: antiquewhite;
     }
     p.para{
         color: white;
@@ -60,8 +66,8 @@
             <li ><a href=" ">News</a></li>
         </ul>
     </div>
+    <img src="float.png" alt="Hello?" class="sticky" width="181" height="182">
     <div class="imgage_spacing">
-        <img src="float.png" alt="Hello?" class="sticky" width="181" height="182">
     </div>
     <div >
         <h1>Hello XP!</h1>
