--- a/HTML/Online_appointment_Request.html
+++ b/HTML/Online_appointment_Request.html
@@ -22,7 +22,7 @@
     }
     .divs{
        margin-top: 20px;
-        display: inline-block;
+       display: inline-block;
     }
     .div1{
         margin-top: 2px;
@@ -79,10 +79,13 @@
         </div>
     </div>
     <div class="container">
+        <div ">
             <form action="/">
-                <div class="div1">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" required>
+                <div class="divs2">
+                    <div>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" required>
+                    </div>
                     <div>Birth Date: <input type="date"></div>
                     <div>Address 1: <input type="text"></div>
                     <div>Address 2: <input type="text"></div>
@@ -118,6 +121,5 @@
                 </div>
             </form>
         </div>
-    </div>
 </body>
 </html>
