--- a/HTML/Online_appointment_Request.html
+++ b/HTML/Online_appointment_Request.html
@@ -33,7 +33,7 @@
         padding: 2px;
     }
     .divs2{
-        margin-top: 20px;
+        
         display: inline-block;
         padding-left: 250px;
     }
@@ -79,9 +79,9 @@
         </div>
     </div>
     <div class="container">
-        <div ">
+        <div >
             <form action="/">
-                <div class="divs2">
+                <div style="top: 0; display: inline-block; margin-top: 1px;">
                     <div>
                         <label for="name">Name:</label>
                         <input type="text" id="name" required>
