--- a/HTML/Online_appointment_Request.html
+++ b/HTML/Online_appointment_Request.html
@@ -21,7 +21,7 @@
         color: white;
     }
     .divs{
-       margin-top: 20px;
+       /* margin-top: 20px; */
        display: inline-block;
     }
     .div1{
@@ -117,7 +117,7 @@
                     <div>Cell Phone:<input type="number" id="name"></div>
                     <div>Email Address: <input type="email"></div>
                     <div>Best time to call: <input type="text"></div>
-                    <p class="lighttext">Selecting Email or Text will allow us to automatically send you an appointment <br>confirmation if we are able to schedule your appointment within your requested time<br> frame.</p>
+                    <!-- <p class="lighttext">Selecting Email or Text will allow us to automatically send you an appointment <br>confirmation if we are able to schedule your appointment within your requested time<br> frame.</p> -->
                 </div>
             </form>
         </div>
