--- a/HTML/Online_appointment_Request.html
+++ b/HTML/Online_appointment_Request.html
@@ -43,6 +43,7 @@
         margin-bottom:0;
     }
     .container{
+        height: 250px;
         margin-right: 600px;
         border: 1px solid grey;
         
@@ -117,7 +118,7 @@
                     <div>Cell Phone:<input type="number" id="name"></div>
                     <div>Email Address: <input type="email"></div>
                     <div>Best time to call: <input type="text"></div>
-                    <!-- <p class="lighttext">Selecting Email or Text will allow us to automatically send you an appointment <br>confirmation if we are able to schedule your appointment within your requested time<br> frame.</p> -->
+                    <p class="lighttext">Selecting Email or Text will allow us to automatically send you an appointment <br>confirmation if we are able to schedule your appointment within your requested time<br> frame.</p>
                 </div>
             </form>
         </div>
