--- a/HTML/Online_appointment_Request.html
+++ b/HTML/Online_appointment_Request.html
@@ -54,7 +54,7 @@
   }
     label[for="name"]:after {
     content: " *";
-    color: red;
+    color: rgb(231, 0, 0);
   }
   form{
     display: inline;
