--- a/HTML/first_program.html
+++ b/HTML/first_program.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
 </head>
+<style>
+    h1{
+        color: antiquewhite;
+    }
+</style>
 <body>
     <h1>This is my first program using Javascript</h1>
 </body>
