--- a/HTML/container.html
+++ b/HTML/container.html
@@ -28,5 +28,8 @@
         <h1 style="background-color:DodgerBlue;">Hello World</h1>
         <p style="background-color:Tomato;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, eligendi id! Totam ex incidunt commodi ducimus provident atque tenetur? Perspiciatis impedit perferendis accusamus!</p>
     </div>
+    <script>
+        document.write("<h1>Hello WOrld!</h1>")
+    </script>
 </body>
 </html>
