--- a/Javascript/printing.html
+++ b/Javascript/printing.html
@@ -9,19 +9,15 @@
 <body>
     <div><p id="listing"></p></div>
     <script>
-        // let array=["a","b","c","d","e"]
-        // let i=1;
-        // let str="";
-        // for(i=0; i<array.length;i++){
-        //     list=document.getElementById('listing');
-        //     str+=(i+1)+". "+array[i]+"<br>";
-        // }
-        // list.innerHTML=str;
-        stu=[2,3,"what",1,2,3,4,5];
-        stu.sort(function(a,b){
-            return a-b
-        });
-        document.getElementById('listing').innerHTML=stu;
+        let array=["a","b","c","d","e"]
+        let i=1;
+        let str="";
+        for(i=0; i<array.length;i++){
+            list=document.getElementById('listing');
+            str+=(i+1)+". "+array[i]+"<br>";
+        }
+        list.innerHTML=str;
+        
     </script>
 </body>
 </html>
