--- a/Javascript/regex.html
+++ b/Javascript/regex.html
@@ -9,6 +9,8 @@
 <body>
     <script>
         let reg=/script/;
+        //let reg=/s[a-b]cript/   this will check a to b between s and c of script  similarly [0-9][A-Z]
+        //
         let str="script java";
         let result=reg.exec(str);
         console.log(result);
