--- a/Javascript/regex.html
+++ b/Javascript/regex.html
@@ -10,7 +10,7 @@
     <script>
         let reg=/script/;
         //let reg=/s[a-b]cript/   this will check a to b between s and c of script  similarly [0-9][A-Z]
-        //
+        //let reg=/s[^r]ript      this will check whether the second chracter is "any character except r"
         let str="script java";
         let result=reg.exec(str);
         console.log(result);
