--- a/Javascript/regex.html
+++ b/Javascript/regex.html
@@ -25,9 +25,22 @@
         /*Username validation: -
         1)Starts with character
         2)Minimum 3 , Maximum 15
+        ans= let reg=/^[a-zA-Z][a-zA-Z0-9]{2,14}$/
         */
-        let reg=/^[a-zA-Z][a-zA-Z0-9]{2,14}$/
-        let str="a1ds";
+
+        /* phone number validation
+        1) 10 digit number
+        2) starts with 6,7,8,9
+        ans = let reg=/^[6-9][0-9]{9}$/*/
+
+        /*email validation
+        raghuveer@gmail.com
+
+        ans= let reg=/^[^\s@]+@[^\s@]+\.[^\s@]+$/
+        */
+
+        let reg=/^[^\s@]+@[^\s@]+\.[^\s@]+$/
+        let str="=uvw12eer@gmail.com";
         let result=reg.exec(str);
         console.log(result);
 
