'this' is object

--- a/Javascript/this.html
+++ b/Javascript/this.html
@@ -47,6 +47,16 @@
         }
         
         const gen = new NameGenerator();
+        //one more example of this
+        const person = {
+            name : "raghuveer",
+            age : 20,
+            sex : "male",
+            details(){
+                console.log("Hi, Iam "+this.name);
+            }
+        }
+        console.log(person.details());
     </script>
 </body>
 </html>
