--- a/Javascript/regex.html
+++ b/Javascript/regex.html
@@ -39,8 +39,9 @@
         ans= let reg=/^[^\s@]+@[^\s@]+\.[^\s@]+$/
         */
 
-        let reg=/^[^\s@]+@[^\s@]+\.[^\s@]+$/
-        let str="=uvw12eer@gmail.com";
+        let reg=/^[1-9]{1}[0-9]{2}\s{0,1}[0-9]{3}$/
+        let str="440009";
+        
         let result=reg.exec(str);
         console.log(result);
 
