--- a/Electron/index.html
+++ b/Electron/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First GUI with electron</title>
 </head>
+<style>
+    h1{
+        color: greenyellow;
+    }
+</style>
 <body>
-    <h1>Hello world</h1>
+    <h1>Press button to execute</h1>
+    <button id="btn">command</button>
+    <script src="render.js"></script>
 </body>
 </html>
