--- a/Electron/index.html
+++ b/Electron/index.html
@@ -15,5 +15,6 @@
     <h1>Press button to execute</h1>
     <button id="btn">command</button>
     <script src="render.js"></script>
+    <input type="text" id="inp">
 </body>
 </html>
