--- a/Electron/index.html
+++ b/Electron/index.html
@@ -14,7 +14,8 @@
 <body>
     <h1>Press button to execute</h1>
     <button id="btn">command</button>
+    
     <script src="render.js"></script>
-    <input type="text" id="inp">
+    <div id="inp"></div>
 </body>
 </html>
