--- a/Electron/index.html
+++ b/Electron/index.html
@@ -11,7 +11,7 @@
         color: greenyellow;
     }
 </style>
-<body>
+<body style="background-color : powderblue">
     <h1>Press button to execute</h1>
     <button id="btn">command</button>
     
