--- a/Electron/index.html
+++ b/Electron/index.html
@@ -8,9 +8,10 @@
 </head>
 <style>
     h1{
-        color: greenyellow;
+        color: rgb(15, 65, 80);
     }
 </style>
+
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
     <button id="btn">command</button>
