--- a/Electron/index.html
+++ b/Electron/index.html
@@ -10,6 +10,9 @@
     h1{
         color: rgb(15, 65, 80);
     }
+    #inp{
+        text-align: center;
+    }
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
