--- a/Electron/index.html
+++ b/Electron/index.html
@@ -12,6 +12,7 @@
     }
     #inp{
         text-align: center;
+        border: solid black 1px;
     }
 </style>
 <body style="background-color : powderblue">
