--- a/Electron/index.html
+++ b/Electron/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First GUI with electron</title>
+    <title>Tracy</title>
 </head>
 <style>
     h1{
@@ -15,7 +15,7 @@
         text-align: center;
         border: solid black 1px;
     }
-    
+
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
