--- a/Electron/index.html
+++ b/Electron/index.html
@@ -19,7 +19,7 @@
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
-    <button id="btn">command</button>
+    <button id="btn">Command</button>
     
     <script src="render.js"></script>
     <div id="inp"></div>
