--- a/Electron/index.html
+++ b/Electron/index.html
@@ -19,9 +19,9 @@
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
-    <button id="btn">Command</button>
+    <button id="btn" style="background-color: bisque;">Command</button>
     
     <script src="render.js"></script>
-    <div id="inp"></div>
+    <input id="inp">
 </body>
 </html>
