--- a/Electron/index.html
+++ b/Electron/index.html
@@ -22,6 +22,6 @@
     <button id="btn" style="background-color: bisque;">Command</button>
     
     <script src="render.js"></script>
-    <input id="inp" style="width: 300px">
+    <input id="inp" style="width: 400px; height:200px">
 </body>
 </html>
