--- a/Electron/index.html
+++ b/Electron/index.html
@@ -19,9 +19,9 @@
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
-    <button id="btn" style="background-color: bisque;">Command</button>
+    <button id="btn" style="background-color: bisque; display:block">Command</button>
     
     <script src="render.js"></script>
-    <input id="inp" style="width: 400px; height:200px">
+    <input id="inp" style="width: 400px; height:100px; padding-top: 10px; ">
 </body>
 </html>
