--- a/Electron/index.html
+++ b/Electron/index.html
@@ -22,6 +22,6 @@
     <button id="btn" style="background-color: bisque; display:block">Command</button>
     
     <script src="render.js"></script>
-    <input id="inp" style="width: 400px; height:100px; padding-top: 10px; ">
+    <input id="inp" style="width: 400px; height:100px; margin-top: 10px; ">
 </body>
 </html>
