--- a/Electron/index.html
+++ b/Electron/index.html
@@ -10,13 +10,14 @@
     h1{
         text-align: center;
         color: rgb(15, 65, 80);
+        border: solid black 1px;
     }
     
     #inp{
         text-align: center;
         border: solid black 1px;
     }
-    
+
 </style>
 <body style="background-color : powderblue">
     <h1>Press button to execute</h1>
