--- a/Electron/index.html
+++ b/Electron/index.html
@@ -18,7 +18,7 @@
         border: solid black 1px;
     }
 </style>
-<body style="background-color : powderblue">
+<body style="background-color : rgb(217, 169, 211)">
     <h1>Press button to execute</h1>
     <button id="btn" style="background-color: bisque; display:block">Command</button>
     
