close button added

--- a/Electron/index.html
+++ b/Electron/index.html
@@ -22,7 +22,7 @@
 <body style="background-color : rgb(217, 196, 214)">
     <h1>Press button to execute</h1>
     <button id="btn" style="background-color: bisque; display:block">Command</button>
-    
+    <button id="close-tracy">Close</button>
     <script src="render.js"></script>
     <input id="inp" style="width: 400px; height:100px; margin-top: 10px; background-color:bisque ">
 </body>
