--- a/HTML/anchor.html
+++ b/HTML/anchor.html
@@ -7,7 +7,8 @@
     <Body>  
         <div class="container" onclick="clicked()">
             <button>Click me !!</button>
-        </div> 
+        </div>
+        <p id="opt2">option2</p>
     <!-- In this example we use the anchor tag for linking one page to another by using the href attribute   
     which specify the url of the second page which you want to link.-->  
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, laudantium cum voluptas facere ratione provident, quas consequuntur blanditiis accusamus mollitia vitae quae id.</p>  
@@ -18,6 +19,8 @@
             console.log("Button clicked!")
             document.getElementsByClassName('container').innerHTML="GGEZ";
         }
+        const o2=document.getElementById('opt2').innerHTML;
+        console.log(o2);
     </script> 
     </Body>  
     
