--- a/Electron/index.html
+++ b/Electron/index.html
@@ -6,25 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tracy</title>
 </head>
-<style>
-
-    h1{
-        text-align: center;
-        color: rgb(15, 65, 80);
-        border: solid black 2px; 
-    }
-    #inp{
-        text-align: center;
-        border: solid black 1px;
-    }
-    
-</style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo&display=swap">
+<link rel="stylesheet" href="style.css">
 <body style="background-color : rgb(217, 196, 214)">
     <h1>Press button to execute</h1>
-    <button id="btn" style="background-color: bisque; display:block">Command</button>
-    <button id="close-tracy">Close</button>
+    <button id="btn" style="background-color: bisque; display:inline; margin-left : 15px;">Command</button>
+    <button id="close-tracy" style="display: inline">Close</button>
     <script src="render.js"></script>
-    <input id="inp" style="width: 400px; height:100px; margin-top: 10px; background-color:bisque ">
+    <div  style="width: 400px; height:100px; margin-top: 10px; background-color:bisque; margin-left:15px ">
+        <p id="inp" class="fade-in-text"></p>
+        </div>
 </body>
 
 </html>
